--- a/package.json
+++ b/package.json
@@ -21,13 +21,7 @@
 		"tailwindcss": "^4.1.12",
 		"typescript": "^5.9.2",
 		"vite": "^6.2.0",
-		"vite-plugin-static-copy": "^2.3.0"
-	},
-	"dependencies": {
-		"amplitudejs": "^5.3.2",
-		"chart.js": "^4.5.0",
-		"color": "^5.0.2",
-		"jquery": "^3.7.1",
+		"vite-plugin-static-copy": "^2.3.0",
 		"postcss-mixins": "^12.1.2"
 	}
 }
