--- a/.github/workflows/buildAndDeploy.yaml
+++ b/.github/workflows/buildAndDeploy.yaml
@@ -20,11 +20,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Normalize image name
+        id: img
+        run: |
+          echo "image_name=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Compute image tag
         id: meta
         run: |
-          echo "image=${REGISTRY}/${IMAGE_NAME}:${GITHUB_SHA}" >> $GITHUB_OUTPUT
-
+          echo "image=${{ env.REGISTRY }}/${{ steps.img.outputs.image_name }}:${GITHUB_SHA}" >> $GITHUB_OUTPUT
+        
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -35,7 +40,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -43,9 +47,10 @@ jobs:
           push: true
           tags: |
             ${{ steps.meta.outputs.image }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ steps.img.outputs.image_name }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      
 
       - name: Deploy over SSH
         uses: appleboy/ssh-action@v1
