--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,6 @@ services:
     ports:
       - "443:443"
       - "80:80"
+    restart: unless-stopped
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
